i18n for new-to-fill page

--- a/conf/fILL.conf
+++ b/conf/fILL.conf
@@ -40,6 +40,10 @@
 	RewriteCond %{REQUEST_URI} /localisation/
 	RewriteRule localisation - [L,NC]
 
+	# Don't touch the static pages
+	#RewriteCond %{REQUEST_URI} ^/new\.html$
+#	RewriteRule ^/new\.html$ - [L,NC]
+
 	# URLs of the form /public/test/en become /cgi-bin/public.cgi?rm=test_form&language=en
 	RewriteCond %{REQUEST_URI} !/(cgi-bin|css|js|plugins|rotations|themes|img|localisation)/
 	RewriteRule "^/([^/\.]+)/([^/\.]+)/([^/\.]+)" "/cgi-bin/$1.cgi?rm=$2_form&language=$3" [R,L]
