tell apache2 not to rewrite URL for rotations-MARC directory

--- a/conf/fILL.conf
+++ b/conf/fILL.conf
@@ -40,6 +40,10 @@
 	RewriteCond %{REQUEST_URI} /localisation/
 	RewriteRule localisation - [L,NC]
 
+	# Don't touch the rotations stuff
+	RewriteCond %{REQUEST_URI} /rotations-MARC/
+	RewriteRule rotations-MARC - [L,NC]
+
 	# Don't touch the static pages
 	#RewriteCond %{REQUEST_URI} ^/new\.html$
 #	RewriteRule ^/new\.html$ - [L,NC]
