framework for training documents and videos

--- a/conf/fILL.conf
+++ b/conf/fILL.conf
@@ -44,6 +44,10 @@
 	RewriteCond %{REQUEST_URI} /rotations-MARC/
 	RewriteRule rotations-MARC - [L,NC]
 
+	# Don't touch the training videos stuff
+	RewriteCond %{REQUEST_URI} /training_videos/
+	RewriteRule training_videos - [L,NC]
+
 	# Don't touch the static pages
 	#RewriteCond %{REQUEST_URI} ^/new\.html$
 #	RewriteRule ^/new\.html$ - [L,NC]
@@ -53,11 +57,11 @@
 	RewriteRule "^/([^/\.]+)/([^/\.]+)/([^/\.]+)" "/cgi-bin/$1.cgi?rm=$2_form&language=$3" [R,L]
 	
 	# URLs of the form /public/test become /cgi-bin/public.cgi?rm=test_form
-	RewriteCond %{REQUEST_URI} !/(cgi-bin|css|js|plugins|rotations|themes|img|localisation)/
+	RewriteCond %{REQUEST_URI} !/(cgi-bin|css|js|plugins|rotations|themes|img|localisation|training_videos)/
 	RewriteRule "^/([^/\.]+)/([^/\.]+)" "/cgi-bin/$1.cgi?rm=$2_form" [R,L]
 
 	# URLs of the form /public become /cgi-bin/public.cgi
-	RewriteCond %{REQUEST_URI} !/(cgi-bin|css|js|plugins|rotations|themes|img)/
+	RewriteCond %{REQUEST_URI} !/(cgi-bin|css|js|plugins|rotations|themes|img|training_videos)/
 	RewriteRule "^/([^/\.]+)" "/cgi-bin/$1.cgi" [R,L]
 
 	DocumentRoot /opt/fILL/htdocs/
