clean up some log messages

--- a/conf/fILL.conf
+++ b/conf/fILL.conf
@@ -26,8 +26,16 @@
 	# for DBI to find a database connection
 	# DBI_DSN and/or DBI_USER may also be defined here
 
-	# /index.html is no longer the default landing page...
 	RewriteEngine On
+
+	RewriteCond %{REQUEST_URI} !^/img/favicon\.ico$ [NC]
+	RewriteCond %{HTTP_HOST} (.+)
+#	RewriteRule ^(.*)favicon\.ico$ http://%1/img/favicon.ico [R=301,L,NC]
+	RewriteRule ^(.*)favicon\.ico$ http://%1/img/favicon.ico [L,NC]
+#	RewriteRule ^favicon\.ico$ /opt/fILL/htdocs/favicon.ico [L,NC]
+#	RewriteRule ^(favicon\.ico)$ %{HTTP_HOST}/$1 [L,NC]
+ 
+	# /index.html is no longer the default landing page...
 	RewriteRule ^/?$ /cgi-bin/public.cgi?rm=login_form [R=302,L]
 
 	# Don't touch the pazpar2 stuff
@@ -48,12 +56,20 @@
 	RewriteCond %{REQUEST_URI} /training_videos/
 	RewriteRule training_videos - [L,NC]
 
+	# Don't touch the surveys stuff
+	RewriteCond %{REQUEST_URI} /surveys/
+	RewriteRule surveys - [L,NC]
+
+	# Don't touch the images stuff
+	RewriteCond %{REQUEST_URI} /img/
+	RewriteRule img - [L,NC]
+
 	# Don't touch the static pages
 	#RewriteCond %{REQUEST_URI} ^/new\.html$
 #	RewriteRule ^/new\.html$ - [L,NC]
 
 	# URLs of the form /public/test/en become /cgi-bin/public.cgi?rm=test_form&language=en
-	RewriteCond %{REQUEST_URI} !/(cgi-bin|css|js|plugins|rotations|themes|img|localisation)/
+	RewriteCond %{REQUEST_URI} !/(cgi-bin|css|js|plugins|rotations|themes|img|localisation|training_videos)/
 	RewriteRule "^/([^/\.]+)/([^/\.]+)/([^/\.]+)" "/cgi-bin/$1.cgi?rm=$2_form&language=$3" [R,L]
 	
 	# URLs of the form /public/test become /cgi-bin/public.cgi?rm=test_form
@@ -61,7 +77,7 @@
 	RewriteRule "^/([^/\.]+)/([^/\.]+)" "/cgi-bin/$1.cgi?rm=$2_form" [R,L]
 
 	# URLs of the form /public become /cgi-bin/public.cgi
-	RewriteCond %{REQUEST_URI} !/(cgi-bin|css|js|plugins|rotations|themes|img|training_videos)/
+	RewriteCond %{REQUEST_URI} !/(cgi-bin|css|js|plugins|rotations|themes|img|localisation|training_videos)/
 	RewriteRule "^/([^/\.]+)" "/cgi-bin/$1.cgi" [R,L]
 
 	DocumentRoot /opt/fILL/htdocs/
